--- a/projects/midterm-project/public/css/main.css
+++ b/projects/midterm-project/public/css/main.css
@@ -1,1 +1,185 @@
-/* Please add your own! */
+/****************
+      GLOBAL 
+*****************/
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900');
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+
+/****************
+      MAIN 
+*****************/
+
+
+#new-posts .new-post-line h2, #new-posts .new-post-line p {
+    display: inline;
+}
+
+.new-post-line {
+    padding: 10px;
+    background-color: #ecf0f1;
+    margin-bottom: 30px;
+}
+
+h1 {
+    font-weight: 700;
+}
+
+article {
+    padding: 10px;
+    background-color: #ecf0f1;
+    margin-bottom: 30px;
+}
+
+.nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.nav li {
+    float: left;
+}
+
+.nav li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav li a:hover, .dropdown:hover .dropbtn {
+    background-color: blue;
+}
+
+.nav li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.nav .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+
+/****************
+      FORM 
+*****************/
+
+.input-field {
+    padding: 10px 0;
+}
+
+label {
+    display: block;
+    padding-bottom: 10px;
+}
+
+input {
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+textarea {
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    width: 80%;
+}
+
+button {
+	border: none;
+	padding: 10px;
+	background-color: blue;
+	color: white;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+
+/****************
+    BLOG POST 
+*****************/
+
+.title-container {
+    text-align: center;
+    padding: 20px;
+}
+
+.title {
+    display: inline;
+    margin-right: 20px;
+}
+
+.content {
+    padding: 20px;
+    width: 60%;
+    margin: 0 auto;
+    background-color: #2c3e50;
+    color: white;
+}
+
+.content a {
+    color: white;
+}
+
+.home-bar {
+    display: inline;
+}
+
+.searchbar {
+    float: right;
+}
+
+.post-comment {
+    padding: 20px;
+    width: 60%;
+    margin: 0 auto;
+}
+
+.comments {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.comment {
+    padding: 5px;
+    margin: 5px;
+    background-color: #ecf0f1;
+}
+
+.comment .time {
+    font-size: small;
+}
