--- a/projects/midterm-project/views/layouts/main.handlebars
+++ b/projects/midterm-project/views/layouts/main.handlebars
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="/public/css/main.css">
-  <title>Final Project</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
-</head>
-<div class="nav">
-  <div>
-    <a href="/Players">Players</a>
-    <a href="/Sports">Sports</a>
-    <a href="/States">States</a>
-    <a href="/Alphabetical">Alphabetical</a>
-    <a href="/Championships">Championships</a>
-  </div>
-</div>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="/public/css/main.css">
+    <title>Midterm Project</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  </head>
 
-<body>
-  <button type="button" id="createNew">Enter a Team</button> {{{body}}}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
-  <script>
-    $('#createNew').on('click', function() {
-      console.log("hi");
-    });
-  </script>
-</body>
+  <body class="container">
+    <h1>Coding Challenges</h1>
+    <h4>A website to find coding challenges to test your skill, or add your own to challenge others!</h4>
+    <div class="nav">
+      <div class="nav-container">
+        {{>nav}}
+      </div>
+    </div>
+    {{{body}}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+    <script>
+      var socket = io();
+      
+      socket.on('new post', newPost => {
+        console.log(newPost);
+        $('#new-posts').append(
+          `<div class="new-post-line">
+            <h2>*New Post: </h2>
+            <h2 class="title">
+              <a href="/post/title/${newPost.title}">${newPost.title}</a>
+            </h2>
+            <p class="difficulty">difficulty: ${newPost.difficulty}</p>
+          </div>`
+        );
+      });
 
+      $('#createNew').on('click', function() {
+        window.location.href='/create';
+      });
+
+      $(document).ready(() => {
+        $('#search').on('keyup', () => {
+          var val = $('#search').val().toLowerCase();
+          var posts = $('.post .title');
+          let count = 0;
+          for (let i = 0; i < posts.length; i++) {
+            var post = posts[i];
+            if (post.innerText.toLowerCase().substring(0, val.length) === val) {
+              post.parentNode.style.display = "block";
+              count++;
+            } else {
+              post.parentNode.style.display = "none";
+            }
+          }
+          if (count === 0) {
+            $('#empty-search').css('display', 'block');
+          } else {
+            $('#empty-search').css('display', 'none');
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
